{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 295,
  "lineage": "dcbcc335-76b7-9e69-971c-4470100ef82a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "checkguard-alb-logs-ns7sgv5w",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:233442448767:loadbalancer/app/checkguard-alb/e0635a73c66d882c",
            "arn_suffix": "app/checkguard-alb/e0635a73c66d882c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "checkguard-alb-1390527999.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:233442448767:loadbalancer/app/checkguard-alb/e0635a73c66d882c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "checkguard-alb",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-09829e42fe913a8f5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004602b87fce0795c"
              },
              {
                "subnet_id": "subnet-057bc60bb910aaa55"
              },
              {
                "subnet_id": "subnet-0b6cc211688586f26"
              }
            ],
            "subnets": [
              "subnet-004602b87fce0795c",
              "subnet-057bc60bb910aaa55",
              "subnet-0b6cc211688586f26"
            ],
            "tags": {
              "Environment": "production",
              "Name": "checkguard-alb"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-alb",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "vpc_id": "vpc-06a36e4fd06bc2eeb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.alb_logs_bucket_suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:233442448767:listener/app/checkguard-alb/e0635a73c66d882c/c846a59619a434b9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:233442448767:targetgroup/checkguard-frontend-tg/a55a28cb95846ae2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:233442448767:listener/app/checkguard-alb/e0635a73c66d882c/c846a59619a434b9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:233442448767:loadbalancer/app/checkguard-alb/e0635a73c66d882c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-frontend-listener"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-frontend-listener",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.alb_logs_bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:233442448767:targetgroup/checkguard-backend-tg/059a7165a8deb330",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:233442448767:listener-rule/app/checkguard-alb/e0635a73c66d882c/c846a59619a434b9/34eabaf9f84be8d0",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*",
                      "/docs",
                      "/health",
                      "/openapi.json",
                      "/redoc"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:233442448767:listener-rule/app/checkguard-alb/e0635a73c66d882c/c846a59619a434b9/34eabaf9f84be8d0",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:233442448767:listener/app/checkguard-alb/e0635a73c66d882c/c846a59619a434b9",
            "priority": 100,
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-backend-rule"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-backend-rule",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.frontend",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.alb_logs_bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:233442448767:targetgroup/checkguard-backend-tg/059a7165a8deb330",
            "arn_suffix": "targetgroup/checkguard-backend-tg/059a7165a8deb330",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:233442448767:targetgroup/checkguard-backend-tg/059a7165a8deb330",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:233442448767:loadbalancer/app/checkguard-alb/e0635a73c66d882c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "checkguard-backend-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "checkguard-backend-target-group"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-backend-target-group",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:233442448767:targetgroup/checkguard-frontend-tg/a55a28cb95846ae2",
            "arn_suffix": "targetgroup/checkguard-frontend-tg/a55a28cb95846ae2",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:233442448767:targetgroup/checkguard-frontend-tg/a55a28cb95846ae2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:233442448767:loadbalancer/app/checkguard-alb/e0635a73c66d882c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "checkguard-frontend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "checkguard-frontend-target-group"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-frontend-target-group",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:security-group/sg-09829e42fe913a8f5",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09829e42fe913a8f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "checkguard-alb-sg",
            "name_prefix": "",
            "owner_id": "233442448767",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "checkguard-alb-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-alb-sg",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:security-group/sg-01a189c1d14102544",
            "description": "Security group for database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a189c1d14102544",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-019c1f14f23825100"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "checkguard-database-sg",
            "name_prefix": "",
            "owner_id": "233442448767",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "checkguard-database-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-database-sg",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:security-group/sg-019c1f14f23825100",
            "description": "Security group for ECS services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019c1f14f23825100",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Backend API from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09829e42fe913a8f5"
                ],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09829e42fe913a8f5"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Inter-service communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "checkguard-ecs-sg",
            "name_prefix": "",
            "owner_id": "233442448767",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "checkguard-ecs-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-ecs-sg",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:security-group/sg-0ffc4731061d4619a",
            "description": "Security group for Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffc4731061d4619a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from ECS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-019c1f14f23825100"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "checkguard-redis-sg",
            "name_prefix": "",
            "owner_id": "233442448767",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "checkguard-redis-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-redis-sg",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:security-group/sg-04fe889e3d41c8cec",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fe889e3d41c8cec",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from ECS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-019c1f14f23825100"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "checkguard-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "233442448767",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc-endpoints-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc-endpoints-sg",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:vpc-endpoint/vpce-0a9e1656639401ecc",
            "dns_entry": [
              {
                "dns_name": "vpce-0a9e1656639401ecc-t5re8xnt.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0a9e1656639401ecc-t5re8xnt-us-east-2b.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0a9e1656639401ecc-t5re8xnt-us-east-2c.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0a9e1656639401ecc-t5re8xnt-us-east-2a.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "api.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z00780933HXXRAWK23A23"
              },
              {
                "dns_name": "ecr.us-east-2.api.aws",
                "hosted_zone_id": "Z0666979X0S1B6UY5HJ7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a9e1656639401ecc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0030c2fe819f0d47f",
              "eni-08763f0f6a10ce031",
              "eni-0f96ae713a71cbd10"
            ],
            "owner_id": "233442448767",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-04fe889e3d41c8cec"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.api",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.158",
                "subnet_id": "subnet-0ff46dd33e34137c0"
              },
              {
                "ipv4": "10.0.2.95",
                "subnet_id": "subnet-080e767110dd2796f"
              },
              {
                "ipv4": "10.0.3.82",
                "subnet_id": "subnet-05282f386915eed96"
              }
            ],
            "subnet_ids": [
              "subnet-05282f386915eed96",
              "subnet-080e767110dd2796f",
              "subnet-0ff46dd33e34137c0"
            ],
            "tags": {
              "Environment": "production",
              "Name": "checkguard-ecr-api-endpoint"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-ecr-api-endpoint",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_security_group.vpc_endpoints",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:vpc-endpoint/vpce-00c4526bafaef6104",
            "dns_entry": [
              {
                "dns_name": "vpce-00c4526bafaef6104-rr5ns18c.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-00c4526bafaef6104-rr5ns18c-us-east-2b.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-00c4526bafaef6104-rr5ns18c-us-east-2a.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-00c4526bafaef6104-rr5ns18c-us-east-2c.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "dkr.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z04212702D0GO059R0WWE"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z04212702D0GO059R0WWE"
              },
              {
                "dns_name": "dkr-ecr.us-east-2.on.aws",
                "hosted_zone_id": "Z06669836VGGENKNE6I5"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-2.on.aws",
                "hosted_zone_id": "Z06669836VGGENKNE6I5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00c4526bafaef6104",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0204df4a4dbe59721",
              "eni-097789c23a090724e",
              "eni-0f6698fba0fcf1f6a"
            ],
            "owner_id": "233442448767",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-04fe889e3d41c8cec"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.dkr",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.117",
                "subnet_id": "subnet-0ff46dd33e34137c0"
              },
              {
                "ipv4": "10.0.2.21",
                "subnet_id": "subnet-080e767110dd2796f"
              },
              {
                "ipv4": "10.0.3.163",
                "subnet_id": "subnet-05282f386915eed96"
              }
            ],
            "subnet_ids": [
              "subnet-05282f386915eed96",
              "subnet-080e767110dd2796f",
              "subnet-0ff46dd33e34137c0"
            ],
            "tags": {
              "Environment": "production",
              "Name": "checkguard-ecr-dkr-endpoint"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-ecr-dkr-endpoint",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_security_group.vpc_endpoints",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:vpc-endpoint/vpce-016d474c4752f086e",
            "dns_entry": [
              {
                "dns_name": "vpce-016d474c4752f086e-t4g5g088.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-016d474c4752f086e-t4g5g088-us-east-2b.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-016d474c4752f086e-t4g5g088-us-east-2a.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-016d474c4752f086e-t4g5g088-us-east-2c.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "logs.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z041868331RNEMJI8XVNF"
              },
              {
                "dns_name": "logs.us-east-2.api.aws",
                "hosted_zone_id": "Z03984702BJINX7W9EHXM"
              },
              {
                "dns_name": "streaming-logs.us-east-2.api.aws",
                "hosted_zone_id": "Z066750593MUY88EMLKX"
              },
              {
                "dns_name": "streaming-logs.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z00780223ZOACGQMUTRO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-016d474c4752f086e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04f9fe319b2ee0084",
              "eni-079767c98ccce29ea",
              "eni-08af8b07695b47104"
            ],
            "owner_id": "233442448767",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-04fe889e3d41c8cec"
            ],
            "service_name": "com.amazonaws.us-east-2.logs",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.139",
                "subnet_id": "subnet-0ff46dd33e34137c0"
              },
              {
                "ipv4": "10.0.2.238",
                "subnet_id": "subnet-080e767110dd2796f"
              },
              {
                "ipv4": "10.0.3.178",
                "subnet_id": "subnet-05282f386915eed96"
              }
            ],
            "subnet_ids": [
              "subnet-05282f386915eed96",
              "subnet-080e767110dd2796f",
              "subnet-0ff46dd33e34137c0"
            ],
            "tags": {
              "Environment": "production",
              "Name": "checkguard-logs-endpoint"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-logs-endpoint",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_security_group.vpc_endpoints",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:vpc-endpoint/vpce-0f659ddf2953a0663",
            "cidr_blocks": [
              "18.34.252.0/22",
              "52.219.141.0/24",
              "18.34.72.0/21",
              "52.219.96.0/20",
              "52.219.224.0/21",
              "16.12.60.0/22",
              "52.219.232.0/22",
              "52.219.80.0/20",
              "3.5.128.0/22",
              "52.219.142.0/23",
              "3.5.132.0/23",
              "16.12.64.0/22",
              "52.219.212.0/22",
              "52.219.176.0/22"
            ],
            "id": "vpce-0f659ddf2953a0663",
            "owner_id": "233442448767",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "region": "us-east-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0b0b46f5d627c3dce",
              "rtb-0e272b58976836d08",
              "rtb-0f2aadc1788a7055b"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "service_region": "us-east-2",
            "state": "available",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-s3-endpoint"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-s3-endpoint",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:vpc-endpoint/vpce-05b846952cb46f8f1",
            "dns_entry": [
              {
                "dns_name": "vpce-05b846952cb46f8f1-ifomajmr.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-05b846952cb46f8f1-ifomajmr-us-east-2c.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-05b846952cb46f8f1-ifomajmr-us-east-2b.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-05b846952cb46f8f1-ifomajmr-us-east-2a.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "secretsmanager.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z07543501OWKHY04UH7S5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05b846952cb46f8f1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01bd4744dde2ef133",
              "eni-0735786cb7f4bf160",
              "eni-0c733a02f703dfebc"
            ],
            "owner_id": "233442448767",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-04fe889e3d41c8cec"
            ],
            "service_name": "com.amazonaws.us-east-2.secretsmanager",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.128",
                "subnet_id": "subnet-0ff46dd33e34137c0"
              },
              {
                "ipv4": "10.0.2.42",
                "subnet_id": "subnet-080e767110dd2796f"
              },
              {
                "ipv4": "10.0.3.240",
                "subnet_id": "subnet-05282f386915eed96"
              }
            ],
            "subnet_ids": [
              "subnet-05282f386915eed96",
              "subnet-080e767110dd2796f",
              "subnet-0ff46dd33e34137c0"
            ],
            "tags": {
              "Environment": "production",
              "Name": "checkguard-secretsmanager-endpoint"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-secretsmanager-endpoint",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_security_group.vpc_endpoints",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"backend\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:subnet/subnet-0ff46dd33e34137c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 243,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff46dd33e34137c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233442448767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI",
              "Tier": "app",
              "Type": "private"
            },
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"backend\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:security-group/sg-037edd2846beff48e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037edd2846beff48e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Backend API port",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09829e42fe913a8f5"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "backend-20250802155036340600000023",
            "name_prefix": "backend-",
            "owner_id": "233442448767",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "backend",
              "Project": "checkguard"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "backend",
              "Owner": "CheckGuard Team",
              "Project": "checkguard"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.ecs_task",
            "aws_iam_role.ecs_task_execution",
            "aws_kms_key.secrets",
            "aws_lb.main",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.alb_logs",
            "aws_secretsmanager_secret.app_secret",
            "aws_secretsmanager_secret.clerk",
            "aws_secretsmanager_secret.clerk_publishable",
            "aws_secretsmanager_secret.database",
            "aws_secretsmanager_secret.gemini",
            "aws_secretsmanager_secret.redis",
            "aws_security_group.alb",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.alb_logs_bucket_suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"backend\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:security-group-rule/sgr-054d994192ebb7907",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-054d994192ebb7907",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-037edd2846beff48e",
            "security_group_rule_id": "sgr-054d994192ebb7907",
            "tags": {
              "Environment": "production",
              "Name": "backend-all",
              "Project": "checkguard"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "backend-all",
              "Owner": "CheckGuard Team",
              "Project": "checkguard"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.ecs_task",
            "aws_iam_role.ecs_task_execution",
            "aws_kms_key.secrets",
            "aws_lb.main",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.alb_logs",
            "aws_secretsmanager_secret.app_secret",
            "aws_secretsmanager_secret.clerk",
            "aws_secretsmanager_secret.clerk_publishable",
            "aws_secretsmanager_secret.database",
            "aws_secretsmanager_secret.gemini",
            "aws_secretsmanager_secret.redis",
            "aws_security_group.alb",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.alb_logs_bucket_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"backend\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb_8000",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:security-group-rule/sgr-0476a883b3ea05a89",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Backend API port",
            "from_port": 8000,
            "id": "sgr-0476a883b3ea05a89",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09829e42fe913a8f5",
            "region": "us-east-2",
            "security_group_id": "sg-037edd2846beff48e",
            "security_group_rule_id": "sgr-0476a883b3ea05a89",
            "tags": {
              "Environment": "production",
              "Name": "backend-alb_8000",
              "Project": "checkguard"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "backend-alb_8000",
              "Owner": "CheckGuard Team",
              "Project": "checkguard"
            },
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.ecs_task",
            "aws_iam_role.ecs_task_execution",
            "aws_kms_key.secrets",
            "aws_lb.main",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.alb_logs",
            "aws_secretsmanager_secret.app_secret",
            "aws_secretsmanager_secret.clerk",
            "aws_secretsmanager_secret.clerk_publishable",
            "aws_secretsmanager_secret.database",
            "aws_secretsmanager_secret.gemini",
            "aws_secretsmanager_secret.redis",
            "aws_security_group.alb",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.alb_logs_bucket_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"celery-worker\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:subnet/subnet-0ff46dd33e34137c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 243,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff46dd33e34137c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233442448767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI",
              "Tier": "app",
              "Type": "private"
            },
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"celery-worker\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:security-group/sg-0b5105213512d0f01",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5105213512d0f01",
            "ingress": [],
            "name": "celery-worker-20250802155036340600000024",
            "name_prefix": "celery-worker-",
            "owner_id": "233442448767",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "celery-worker",
              "Project": "checkguard"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "celery-worker",
              "Owner": "CheckGuard Team",
              "Project": "checkguard"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.ecs_task",
            "aws_iam_role.ecs_task_execution",
            "aws_kms_key.secrets",
            "aws_lb.main",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.alb_logs",
            "aws_secretsmanager_secret.app_secret",
            "aws_secretsmanager_secret.clerk",
            "aws_secretsmanager_secret.clerk_publishable",
            "aws_secretsmanager_secret.database",
            "aws_secretsmanager_secret.gemini",
            "aws_secretsmanager_secret.redis",
            "aws_security_group.alb",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.alb_logs_bucket_suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"celery-worker\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:security-group-rule/sgr-0be479d65bd1a421b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0be479d65bd1a421b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-0b5105213512d0f01",
            "security_group_rule_id": "sgr-0be479d65bd1a421b",
            "tags": {
              "Environment": "production",
              "Name": "celery-worker-all",
              "Project": "checkguard"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "celery-worker-all",
              "Owner": "CheckGuard Team",
              "Project": "checkguard"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.ecs_task",
            "aws_iam_role.ecs_task_execution",
            "aws_kms_key.secrets",
            "aws_lb.main",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.alb_logs",
            "aws_secretsmanager_secret.app_secret",
            "aws_secretsmanager_secret.clerk",
            "aws_secretsmanager_secret.clerk_publishable",
            "aws_secretsmanager_secret.database",
            "aws_secretsmanager_secret.gemini",
            "aws_secretsmanager_secret.redis",
            "aws_security_group.alb",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.alb_logs_bucket_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"frontend\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:subnet/subnet-0ff46dd33e34137c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 243,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff46dd33e34137c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233442448767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI",
              "Tier": "app",
              "Type": "private"
            },
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"frontend\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:security-group/sg-00fdc06e44e2ca172",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fdc06e44e2ca172",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Frontend port",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09829e42fe913a8f5"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "frontend-20250802155036340800000025",
            "name_prefix": "frontend-",
            "owner_id": "233442448767",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "frontend",
              "Project": "checkguard"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "frontend",
              "Owner": "CheckGuard Team",
              "Project": "checkguard"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.ecs_task",
            "aws_iam_role.ecs_task_execution",
            "aws_kms_key.secrets",
            "aws_lb.main",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.alb_logs",
            "aws_secretsmanager_secret.app_secret",
            "aws_secretsmanager_secret.clerk",
            "aws_secretsmanager_secret.clerk_publishable",
            "aws_secretsmanager_secret.database",
            "aws_secretsmanager_secret.gemini",
            "aws_secretsmanager_secret.redis",
            "aws_security_group.alb",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.alb_logs_bucket_suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"frontend\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:security-group-rule/sgr-09024e5e4e0338033",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09024e5e4e0338033",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-00fdc06e44e2ca172",
            "security_group_rule_id": "sgr-09024e5e4e0338033",
            "tags": {
              "Environment": "production",
              "Name": "frontend-all",
              "Project": "checkguard"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "frontend-all",
              "Owner": "CheckGuard Team",
              "Project": "checkguard"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.ecs_task",
            "aws_iam_role.ecs_task_execution",
            "aws_kms_key.secrets",
            "aws_lb.main",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.alb_logs",
            "aws_secretsmanager_secret.app_secret",
            "aws_secretsmanager_secret.clerk",
            "aws_secretsmanager_secret.clerk_publishable",
            "aws_secretsmanager_secret.database",
            "aws_secretsmanager_secret.gemini",
            "aws_secretsmanager_secret.redis",
            "aws_security_group.alb",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.alb_logs_bucket_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"frontend\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb_3000",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:security-group-rule/sgr-050045a9afdaf54d1",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Frontend port",
            "from_port": 3000,
            "id": "sgr-050045a9afdaf54d1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09829e42fe913a8f5",
            "region": "us-east-2",
            "security_group_id": "sg-00fdc06e44e2ca172",
            "security_group_rule_id": "sgr-050045a9afdaf54d1",
            "tags": {
              "Environment": "production",
              "Name": "frontend-alb_3000",
              "Project": "checkguard"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "frontend-alb_3000",
              "Owner": "CheckGuard Team",
              "Project": "checkguard"
            },
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.ecs_task",
            "aws_iam_role.ecs_task_execution",
            "aws_kms_key.secrets",
            "aws_lb.main",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.alb_logs",
            "aws_secretsmanager_secret.app_secret",
            "aws_secretsmanager_secret.clerk",
            "aws_secretsmanager_secret.clerk_publishable",
            "aws_secretsmanager_secret.database",
            "aws_secretsmanager_secret.gemini",
            "aws_secretsmanager_secret.redis",
            "aws_security_group.alb",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.alb_logs_bucket_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:security-group/sg-0e308446aae2dc29e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e308446aae2dc29e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from ECS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-019c1f14f23825100"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "checkguard-redis-2025080215472770100000000a",
            "name_prefix": "checkguard-redis-",
            "owner_id": "233442448767",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "checkguard-redis",
              "Service": "cache",
              "terraform-aws-modules": "elasticache"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-redis",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI",
              "Service": "cache",
              "terraform-aws-modules": "elasticache"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:security-group-rule/sgr-059ccd92229fee81b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Redis from ECS",
            "from_port": 6379,
            "id": "sgr-059ccd92229fee81b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-019c1f14f23825100",
            "region": "us-east-2",
            "security_group_id": "sg-0e308446aae2dc29e",
            "security_group_rule_id": "sgr-059ccd92229fee81b",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-redis",
              "Service": "cache",
              "terraform-aws-modules": "elasticache"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-redis",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI",
              "Service": "cache",
              "terraform-aws-modules": "elasticache"
            },
            "to_port": 6379
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "module.elasticache.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:network-acl/acl-0abed85771b233001",
            "default_network_acl_id": "acl-0abed85771b233001",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0abed85771b233001",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "233442448767",
            "region": "us-east-2",
            "subnet_ids": [
              "subnet-003c036cf12f0c335",
              "subnet-004602b87fce0795c",
              "subnet-05282f386915eed96",
              "subnet-057bc60bb910aaa55",
              "subnet-080e767110dd2796f",
              "subnet-0b6cc211688586f26",
              "subnet-0c1a3ee3e730a2b57",
              "subnet-0fd27e04c7d0f4409",
              "subnet-0ff46dd33e34137c0"
            ],
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:route-table/rtb-09f5d02ec1d74d416",
            "default_route_table_id": "rtb-09f5d02ec1d74d416",
            "id": "rtb-09f5d02ec1d74d416",
            "owner_id": "233442448767",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:security-group/sg-0bb04dbd45a4f8720",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0bb04dbd45a4f8720",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "233442448767",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da0e848d7fbf7aa1",
            "arn": "arn:aws:ec2:us-east-2:233442448767:elastic-ip/eipalloc-0da0e848d7fbf7aa1",
            "association_id": "eipassoc-018725e673802a12b",
            "domain": "vpc",
            "id": "eipalloc-0da0e848d7fbf7aa1",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0dbdedb60722a26e3",
            "private_dns": "ip-10-0-101-77.us-east-2.compute.internal",
            "private_ip": "10.0.101.77",
            "public_dns": "ec2-3-148-153-243.us-east-2.compute.amazonaws.com",
            "public_ip": "3.148.153.243",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06988b47afc60167f",
            "arn": "arn:aws:ec2:us-east-2:233442448767:elastic-ip/eipalloc-06988b47afc60167f",
            "association_id": "eipassoc-06be12db198dbcbc1",
            "domain": "vpc",
            "id": "eipalloc-06988b47afc60167f",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0417e51ff02882dd8",
            "private_dns": "ip-10-0-102-192.us-east-2.compute.internal",
            "private_ip": "10.0.102.192",
            "public_dns": "ec2-3-137-111-41.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.111.41",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbd6b539d6ef80ff",
            "arn": "arn:aws:ec2:us-east-2:233442448767:elastic-ip/eipalloc-0fbd6b539d6ef80ff",
            "association_id": "eipassoc-0f0ef1f12bf1f75c5",
            "domain": "vpc",
            "id": "eipalloc-0fbd6b539d6ef80ff",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0e2d8621091d63f4b",
            "private_dns": "ip-10-0-103-18.us-east-2.compute.internal",
            "private_ip": "10.0.103.18",
            "public_dns": "ec2-18-223-59-157.us-east-2.compute.amazonaws.com",
            "public_ip": "18.223.59.157",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:internet-gateway/igw-02ce56db711aebe10",
            "id": "igw-02ce56db711aebe10",
            "owner_id": "233442448767",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da0e848d7fbf7aa1",
            "association_id": "eipassoc-018725e673802a12b",
            "connectivity_type": "public",
            "id": "nat-0d73e0fcf0b2e2804",
            "network_interface_id": "eni-0dbdedb60722a26e3",
            "private_ip": "10.0.101.77",
            "public_ip": "3.148.153.243",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b6cc211688586f26",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06988b47afc60167f",
            "association_id": "eipassoc-06be12db198dbcbc1",
            "connectivity_type": "public",
            "id": "nat-059988b1329455ba6",
            "network_interface_id": "eni-0417e51ff02882dd8",
            "private_ip": "10.0.102.192",
            "public_ip": "3.137.111.41",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-004602b87fce0795c",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbd6b539d6ef80ff",
            "association_id": "eipassoc-0f0ef1f12bf1f75c5",
            "connectivity_type": "public",
            "id": "nat-099113f931fc2e08c",
            "network_interface_id": "eni-0e2d8621091d63f4b",
            "private_ip": "10.0.103.18",
            "public_ip": "18.223.59.157",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-057bc60bb910aaa55",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f2aadc1788a7055b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d73e0fcf0b2e2804",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0f2aadc1788a7055b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e272b58976836d081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-059988b1329455ba6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0e272b58976836d08",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b0b46f5d627c3dce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-099113f931fc2e08c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0b0b46f5d627c3dce",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02ce56db711aebe10",
            "id": "r-rtb-08237a3f209e041041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-08237a3f209e04104",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:route-table/rtb-0ac31ee4e99513c6f",
            "id": "rtb-0ac31ee4e99513c6f",
            "owner_id": "233442448767",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:route-table/rtb-0b98fc046920dcda2",
            "id": "rtb-0b98fc046920dcda2",
            "owner_id": "233442448767",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:route-table/rtb-0bb4d1a9d5bf8505c",
            "id": "rtb-0bb4d1a9d5bf8505c",
            "owner_id": "233442448767",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:route-table/rtb-0f2aadc1788a7055b",
            "id": "rtb-0f2aadc1788a7055b",
            "owner_id": "233442448767",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d73e0fcf0b2e2804",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:route-table/rtb-0e272b58976836d08",
            "id": "rtb-0e272b58976836d08",
            "owner_id": "233442448767",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-059988b1329455ba6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:route-table/rtb-0b0b46f5d627c3dce",
            "id": "rtb-0b0b46f5d627c3dce",
            "owner_id": "233442448767",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-099113f931fc2e08c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:route-table/rtb-08237a3f209e04104",
            "id": "rtb-08237a3f209e04104",
            "owner_id": "233442448767",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ce56db711aebe10",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0333ac3a20236eef0",
            "region": "us-east-2",
            "route_table_id": "rtb-0ac31ee4e99513c6f",
            "subnet_id": "subnet-0fd27e04c7d0f4409"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f92ada3a8e51fb33",
            "region": "us-east-2",
            "route_table_id": "rtb-0b98fc046920dcda2",
            "subnet_id": "subnet-003c036cf12f0c335"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008498fb950bb5736",
            "region": "us-east-2",
            "route_table_id": "rtb-0bb4d1a9d5bf8505c",
            "subnet_id": "subnet-0c1a3ee3e730a2b57"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0437dd42e54df7c",
            "region": "us-east-2",
            "route_table_id": "rtb-0f2aadc1788a7055b",
            "subnet_id": "subnet-0ff46dd33e34137c0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016e1ea9392bf4bae",
            "region": "us-east-2",
            "route_table_id": "rtb-0e272b58976836d08",
            "subnet_id": "subnet-080e767110dd2796f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d25c02fdf886a97",
            "region": "us-east-2",
            "route_table_id": "rtb-0b0b46f5d627c3dce",
            "subnet_id": "subnet-05282f386915eed96"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019b4743a02343c72",
            "region": "us-east-2",
            "route_table_id": "rtb-08237a3f209e04104",
            "subnet_id": "subnet-0b6cc211688586f26"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09722d189170cbcfe",
            "region": "us-east-2",
            "route_table_id": "rtb-08237a3f209e04104",
            "subnet_id": "subnet-004602b87fce0795c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d8c336305831dcd",
            "region": "us-east-2",
            "route_table_id": "rtb-08237a3f209e04104",
            "subnet_id": "subnet-057bc60bb910aaa55"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:subnet/subnet-0fd27e04c7d0f4409",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd27e04c7d0f4409",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233442448767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc",
              "Tier": "database",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI",
              "Tier": "database",
              "Type": "private"
            },
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:subnet/subnet-003c036cf12f0c335",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003c036cf12f0c335",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233442448767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc",
              "Tier": "database",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI",
              "Tier": "database",
              "Type": "private"
            },
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:subnet/subnet-0c1a3ee3e730a2b57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.203.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1a3ee3e730a2b57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233442448767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc",
              "Tier": "database",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI",
              "Tier": "database",
              "Type": "private"
            },
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:subnet/subnet-0ff46dd33e34137c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff46dd33e34137c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233442448767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc",
              "Tier": "app",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI",
              "Tier": "app",
              "Type": "private"
            },
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:subnet/subnet-080e767110dd2796f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080e767110dd2796f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233442448767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc",
              "Tier": "app",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI",
              "Tier": "app",
              "Type": "private"
            },
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:subnet/subnet-05282f386915eed96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05282f386915eed96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233442448767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc",
              "Tier": "app",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI",
              "Tier": "app",
              "Type": "private"
            },
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:subnet/subnet-0b6cc211688586f26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6cc211688586f26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233442448767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc",
              "Tier": "web",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI",
              "Tier": "web",
              "Type": "public"
            },
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:subnet/subnet-004602b87fce0795c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004602b87fce0795c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233442448767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc",
              "Tier": "web",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI",
              "Tier": "web",
              "Type": "public"
            },
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:subnet/subnet-057bc60bb910aaa55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057bc60bb910aaa55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233442448767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc",
              "Tier": "web",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI",
              "Tier": "web",
              "Type": "public"
            },
            "vpc_id": "vpc-06a36e4fd06bc2eeb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233442448767:vpc/vpc-06a36e4fd06bc2eeb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0abed85771b233001",
            "default_route_table_id": "rtb-09f5d02ec1d74d416",
            "default_security_group_id": "sg-0bb04dbd45a4f8720",
            "dhcp_options_id": "dopt-074c4b3bc285cbc4e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06a36e4fd06bc2eeb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09f5d02ec1d74d416",
            "owner_id": "233442448767",
            "region": "us-east-2",
            "tags": {
              "Environment": "production",
              "Name": "checkguard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "checkguard-vpc",
              "Owner": "CheckGuard Team",
              "Project": "CheckGuard AI"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}